--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
       <div class="container">
-        <h1>Fish Search</h1>
+        <h1>Salt Life/Fish Search</h1>
         <!-- Rendered buttons go here-->
 
         <div id="buttons-view"></div>
@@ -27,7 +27,7 @@
             <input id="add-fish" type="submit" value="Add a fish">
         </form>
 
-        <div id="fishes-view"></div>
+        <div id="topics-view"></div>
 
       </div>  <!-- end of container -->
         <!-- jQuery -->
