changes before clicking on pictures

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
     <body>
       <div class="container">
-        <h1>Salt Life/Fish Search</h1>
+        <h1>Salt Life Search</h1>
         <!-- Rendered buttons go here-->
 
         <div id="buttons-view"></div>
 
         <form id="fish-form">
-            <label for="fish-input">Add a fish to see some awesomeness!</label>
-            <input type="text" id="fish-input"><br>
+            <label for="fish-input">Add a fish or other sea life creature to see some awesomeness!</label>
+            <input type="text" id="fish-input">
         <!-- Button triggers new fish to be added  -->
             <input id="add-fish" type="submit" value="Add a fish">
         </form>
