giphy working well

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div id="buttons-view"></div>
 
         <form id="fish-form">
-            <label for="fish-input">Add a fish or other sea life creature to see some awesomeness!</label>
-            <input type="text" id="fish-input">
-        <!-- Button triggers new fish to be added  -->
-            <input id="add-fish" type="submit" value="Add a fish">
+            <label for="fish-input">Add a salt life creature to see some awesomeness!</label>
+            <input type="text" id="fish-input" value="funny fish">
+        <!-- Submit button is for new fish to be added  -->
+            <input id="add-fish" type="submit" value="Submit">
         </form>
 
         <div id="topics-view"></div>
