cleaned up responsiveness

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
       <div class="container">
-        <h1>Salt Life Search</h1>
+       <!-- <h1>Salt Life Search</h1>  -->
         <!-- Rendered buttons go here-->
 
         <div id="buttons-view"></div>
