--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       </div>  <!-- end of container -->
         <!-- jQuery -->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+        <!-- ajax -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <!-- Script -->
         <script type="text/javascript" src="assets/javascript/app.js"></script>
     </body>
